correct docker errors